--- a/src/pages/carrello/carrello.html
+++ b/src/pages/carrello/carrello.html
@@ -7,10 +7,15 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>carrello</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+
+    <ion-title>Carrello</ion-title>
   </ion-navbar>
 
 </ion-header>
+
 
 
 <ion-content padding lazy-scroll class="noPadding">
